--- a/src/main/resources/static/css/forgetPassword.css
+++ b/src/main/resources/static/css/forgetPassword.css
@@ -21,5 +21,25 @@
     left: 620px !important;
 }
 #registerFormBtn {
-    margin-left: 250px;
+    margin-left: 30%;
+}
+
+/* 手机 */
+@media screen and (max-device-width: 700px) {
+    .register-title-line, #art-list form {
+        margin-left: 20% !important;
+    }
+    .group-getTest {
+        top: unset !important;
+        left: 70% !important;
+        position: relative !important;
+    }
+    #registerFormBtn {
+        margin-left: 45% !important;
+    }
+
+    .footer {
+        top: 830px !important;
+        position: relative;
+    }
 }
