--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -22,8 +22,8 @@
             font-weight: 400;
             width: 370px;
 
-            margin-top: 250px;
-            margin-left: 600px;
+            margin-top: 15%;
+            margin-left: 38%;
         }
 
         #registerUpdateFormBtn {
@@ -50,6 +50,12 @@
         #register-success-text-two {
             letter-spacing: 10px;
             margin-left: 60px;
+        }
+
+        @media screen and (max-device-width: 700px) {
+            .register-success {
+                margin-top: 40% !important;
+            }
         }
     </style>
     <link rel="icon" href="https://seaguller.oss-cn-beijing.aliyuncs.com/static/myIcon.ico" type="image/x-icon"/>
