--- a/src/main/resources/static/css/update.css
+++ b/src/main/resources/static/css/update.css
@@ -106,3 +106,82 @@
     top: 2910px;
 }
 
+/* 手机 */
+@media screen and (max-device-width: 700px) {
+    #am-icon-star-one {
+        margin-top: 111%;
+        left: 12%;
+        font-size: 2.5vw;
+        top: unset;
+    }
+    #art-update-title {
+        margin-top: 110%;
+        left: 20%;
+        font-size: 5vw;
+        top: unset;
+    }
+    #am-icon-star-two {
+        margin-top: 119%;
+        left: 55%;
+        font-size: 2.5vw;
+        top: unset;
+    }
+    #art-img {
+        top: 90%;
+        left: unset;
+        width: 100%;
+    }
+    #art-text {
+        top: unset;
+        margin-top: 140%;
+        left: 15%;
+        width: 70%;
+        font-size: 4vw;
+    }
+    #art-title-update {
+        top: 300%;
+        left: 5%;
+        font-size: 6vw;
+    }
+
+    .art-text-update-all {
+        font-size: 5.5vw;
+        left: 20%;
+        width: 76vw;
+    }
+    .art-text-update-content {
+        font-size: 4vw;
+    }
+
+    #art-text-update-1 {
+        top: 320%;
+    }
+    #art-text-update-2 {
+        top: 360%;
+    }
+    #art-text-update-3 {
+        top: 400%;
+    }
+    #art-text-update-4 {
+        top: 455%;
+    }
+    #art-text-update-5 {
+        top: 505%;
+    }
+    #art-text-update-6 {
+        top: 560%;
+    }
+    #art-text-update-7 {
+        top: 615%;
+    }
+    #art-text-update-8 {
+        top: 675%;
+    }
+
+    .footer {
+        top: 2320px !important;
+        position: relative;
+    }
+
+}
+
