--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -222,7 +222,7 @@
             <div id="friend-title-text">友谊的小船坚固无比</div>
         </div>
         <div id="friend-src">
-            <ul>
+            <ul id="friend-ul">
                 <li>
                     <a class="friend-a" href="https://www.zhyocean.cn" title="程序员张先森" target="_blank">
                         <img class="link-img" src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/friends/zhy.png">
